# my-vulkan-framework-incubator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
cmake/: common.cmake  deps.cmake
docs/: tips.md
framework/: CMakeLists.txt
framework/include/vk1/common/: common.hpp  util.hpp
framework/include/vk1/core/: allocation.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  common.hpp  context.hpp  fence_pool.hpp  frame_buffer.hpp  handle.hpp  image.hpp  image.hpp.old  image_view.hpp  instance.hpp  logical_device.hpp  physical_device.hpp  pipeline.hpp  render_pass.hpp  sampler.hpp  semaphore_pool.hpp  stage_pool.hpp  swapchain.hpp
framework/include/vk1/platform/: glfw_window.hpp  window.hpp
framework/include/vk1/rendering/: frame_context.hpp  render_context.hpp  render_context.hpp.old  render_target.hpp
framework/include/vk1/support/: gltf_loader.hpp  model.hpp
framework/include/vodka/: vodka_instance.hpp  vodka_physical_device.hpp
framework/src/: allocation.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  context.cpp  fence_pool.cpp  frame_buffer.cpp  frame_context.cpp  glfw_window.cpp  gltf_loader.cpp  image.cpp  image_view.cpp  instance.cpp  logical_device.cpp  physical_device.cpp  pipeline.cpp  render_context.cpp  render_context.cpp.old  render_pass.cpp  render_target.cpp  sampler.cpp  semaphore_pool.cpp  stage_pool.cpp  swapchain.cpp
framework/test/: main.cpp  test_vk1.cpp
shaders/: compile.bat  shader.vert
